--- a/Twitter/TwitterSentimentAnalysis.ipynb
+++ b/Twitter/TwitterSentimentAnalysis.ipynb
@@ -961,19 +961,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#lets try it on our own sentence.\n",
     "\n",
     "pos1 = \"I'm feeling great today, thanks for asking!\"\n",
-    "pos2 = \"even though i \"\n",
+    "pos2 = \"even though i am happy that i got the job, the pay is very less.\"\n",
     "\n",
-    "neg1 = \"very frustated with recent development in my country.\"\n",
-    "neg2 = \"\"\n",
+    "neg1 = \"this has been a very bad year for me.\"\n",
+    "neg2 = \"I'm very frustated with recent developments in my country.\"\n",
     "\n",
-    "combined_arr = np.array([pos,neg])\n",
+    "combined_arr = np.array([pos1,pos2,neg1,neg2])\n",
     "\n",
     "sentences = t.texts_to_sequences(combined_arr)\n",
     "\n",
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1026,21 +1026,41 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>very frustated with recent development in my country.</td>\n",
-       "      <td>0.665812</td>\n",
+       "      <td>even though i am happy that i got the job, the pay is very less.</td>\n",
+       "      <td>0.588187</td>\n",
        "      <td>+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>this has been a very bad year for me.</td>\n",
+       "      <td>0.082789</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I'm very frustated with recent developments in my country.</td>\n",
+       "      <td>0.194554</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                       0  analysis result\n",
-       "0  I'm feeling great today, thanks for asking!            0.976719  +    \n",
-       "1  very frustated with recent development in my country.  0.665812  +    "
+       "                                                                  0  analysis  \\\n",
+       "0  I'm feeling great today, thanks for asking!                       0.976719   \n",
+       "1  even though i am happy that i got the job, the pay is very less.  0.588187   \n",
+       "2  this has been a very bad year for me.                             0.082789   \n",
+       "3  I'm very frustated with recent developments in my country.        0.194554   \n",
+       "\n",
+       "  result  \n",
+       "0  +      \n",
+       "1  +      \n",
+       "2  -      \n",
+       "3  -      "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,6 +1068,13 @@
    "source": [
     "res_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
